@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.7.7) unstable; urgency=low
   * http-client: try to read response after write error
   * http-client: deliver response body after headers are finished
   * http-client: release socket as early as possible
+  * http-client: serve buffer after socket has been closed
   * istream-chunked: clear input stream in abort handler
 
  --
